Last change of the day for the FAQ, main page, and about page

--- a/resources/stage/web/FAQ.html
+++ b/resources/stage/web/FAQ.html
@@ -151,7 +151,7 @@
       <div class="col-md-9" id="mycontent">
         <div id="what_is_bitpieces">
           <h2 class="">What is Bitpieces?</h2>
-          Bitpieces is a crowd-funding platform to get projects off the ground. Instead of promising
+          Bitpieces is a crowd-funding platform to get creative projects off the ground. Instead of promising
           a product after a funding goal is met, a <a href="#what_is_a_creator">creator</a> issues 
           <a href="#what_are_pieces">pieces</a>, at a certain price per piece, and promises 
           <a href="#what_are_rewards">rewards</a> for owning pieces. Rewards grow continuously over time, 
@@ -336,8 +336,9 @@
             <hr class="col-md-12">
           </div>
           <div id="what_are_the_fees">
-            <h2 class="">What are fees for using Bitpieces?</h2>
-            For funders of projects, Bitpieces is completely free. Bitpieces uses Coinbase as a payment processor,
+            <h2 class="">What are the fees for using Bitpieces?</h2>
+            For funders of projects, Bitpieces is completely free. Bitpieces uses 
+            <a href="https://coinbase.com/">Coinbase</a> as a payment processor,
             which currently has zero fees for Bitpieces transactions. Buying the initial pieces, or issuing bids
             and asks is a zero-fee process. Withdrawals, after selling pieces, are also entirely free.
 
@@ -373,7 +374,7 @@
             All transactions, such as withdrawing or depositing, buying, bidding, asking, are 
             done in BTC. If a user has chosen USD as their primary currency, any price field
             is converted to BTC. Historical, and current-time conversions,
-            are done using <a href="https://bitcoinaverage.com/#USD">Bitcoinaverage.com's API,</a> and 
+            are done using <a href="https://bitcoinaverage.com/#USD">Bitcoinaverage.com's API</a>, and 
             updated every 15 minutes.
             <hr class="col-md-12">
           </div>
@@ -381,15 +382,10 @@
 
           <div id="how_safe_is_bitpieces" style="min-height:500px;">
             <h2 class="">How safe is Bitpieces?</h2>
-            Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
-            doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore
-            veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim
-            ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
-            cor magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro
-            quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci
-            velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore
-            magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum
-            exercitationem ullam corporis suscipit laboriosam, nisi ut
+            Bitpieces is still considered to be at a beta safety-level, but here are our 
+            <a href="#how_do_i_know_if_a_creator_is_safe">5 pillars of security</a>. To test Bitpieces 
+            in a no-money, completely risk-free testing environment, head over to our <a href="#">test site</a>, 
+            where you can simulate user and creator accounts, with no real money involved.
           </div>
         </div>
       </div>
