I lied, one more.

--- a/resources/stage/web/FAQ.html
+++ b/resources/stage/web/FAQ.html
@@ -145,6 +145,9 @@
             <li><a href="#why_cant_i_fund_the_creator_directly">Why can't I fund the creator directly?<i class="fa fa-chevron-right pull-right"></i></a></li>
             <li><a href="#how_does_currency_conversion_work">How does currency conversion work?<i class="fa fa-chevron-right pull-right"></i></a></li>
             <li><a href="#how_safe_is_bitpieces">How safe is Bitpieces?<i class="fa fa-chevron-right pull-right"></i></a></li>
+            <li><a href="#where_do_i_report_issues">Where do I report issues?<i class="fa fa-chevron-right pull-right"></i></a></li>
+            
+
           </ul>
         </div>
       </div>
@@ -380,12 +383,18 @@
           </div>
 
 
-          <div id="how_safe_is_bitpieces" style="min-height:500px;">
+          <div id="how_safe_is_bitpieces">
             <h2 class="">How safe is Bitpieces?</h2>
             Bitpieces is still considered to be at a beta safety-level, but here are our 
             <a href="#how_do_i_know_if_a_creator_is_safe">5 pillars of security</a>. To test Bitpieces 
             in a no-money, completely risk-free testing environment, head over to our <a href="#">test site</a>, 
             where you can simulate user and creator accounts, with no real money involved.
+            <hr class="col-md-12">
+          </div>
+
+          <div id="where_do_i_report_issues" style="min-height:500px;">
+            <h2 class="">Where do I report issues?</h2>
+            Issues can be reported on the Bitpieces <a href="https://github.com/tchoulihan/bitpieces">github</a> repository.
           </div>
         </div>
       </div>
