--- a/resources/stage/web/creator_main.html
+++ b/resources/stage/web/creator_main.html
@@ -269,8 +269,8 @@
                <p class="announcement-text">Backers</p>
 
                <p id="creators_safety_current" class="announcement-heading"></p>
-               <p class="announcement-text">Safety rating <a href="FAQ#how_do_i_know_if_a_creator_is_safe">
-               <i class="fa fa-info"></i></a></p>
+               <p class="announcement-text">Safety rating    <a href="FAQ#how_do_i_know_if_a_creator_is_safe">
+               <i class="fa fa-info-circle"></i></a></p>
 
                <p id="pieces_held_current" class="announcement-heading"></p>
                <p class="announcement-text">Pieces held</p>
