--- a/resources/stage/web/carousel.html
+++ b/resources/stage/web/carousel.html
@@ -342,7 +342,7 @@
 
                   <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
-                      <button id="signinBtn" type="submit" class="btn btn-default">Sign in</button>
+                      <button id="signinBtn" type="submit" class="btn btn-primary">Sign in</button>
                     </div>
                   </div>
                 </form>
@@ -409,7 +409,12 @@
         <div class="col-sm-10">
           <input name="email" type="inputEmail3" class="form-control" id="inputEmail3" placeholder="Email"
           data-bv-emailaddress="true"
-          data-bv-emailaddress-message="The input is not a valid email address"  />
+          data-bv-emailaddress-message="The input is not a valid email address"  
+
+          data-bv-notempty="true"
+          data-bv-notempty-message="An email is required"
+
+          />
         </div>
       </div>
 
@@ -467,7 +472,7 @@
             <input name="terms" type="checkbox"
             data-bv-notempty="true"
             data-bv-notempty-message="You must accept the terms and conditions"
-  
+
 
             > 
             <a href="#" data-toggle="modal" data-target="#userDisclaimerModal">I accept these terms and conditions </a>
@@ -481,7 +486,7 @@
     </div>
     <div class="form-group">
       <div class="col-sm-offset-2 col-sm-10">
-        <button id="registerBtn" type="submit" class="btn btn-default">Register</button>
+        <button id="registerBtn" type="submit" class="btn btn-primary">Register</button>
       </div>
     </div>
   </form>
