--- a/resources/stage/web/creators.html
+++ b/resources/stage/web/creators.html
@@ -65,7 +65,7 @@
                <li class="active"><a href="/userdashboard_overview" id="dashboardhref" class="hide">Dashboard</a></li>
                <!-- <li><a href="#login" id="loginhref" data-toggle="modal" data-target="#userloginModal">Login/Register</a></li>
                <li><a href="#logout" class="hide">Log Out</a></li> -->
-                             <li class="dropdown">
+               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Resources <b class="caret"></b></a>
                 <ul class="dropdown-menu">
                   <li><a href="about">About Bitpieces</a></li>
@@ -193,7 +193,10 @@
                   <div class="col-sm-10">
                     <input name="email" type="inputEmail3" class="form-control" id="inputEmail3" placeholder="Email"
                     data-bv-emailaddress="true"
-                    data-bv-emailaddress-message="The input is not a valid email address"  />
+                    data-bv-emailaddress-message="The input is not a valid email address" 
+
+                    data-bv-notempty="true"
+                    data-bv-notempty-message="The email is required and cannot be empty" />
                   </div>
                 </div>
 
@@ -251,8 +254,7 @@
               </div>
               <div class="form-group">
                 <div class="col-sm-offset-2 col-sm-10">
-                  <button id="creatorRegisterBtn" type="submit" class="btn btn-primary"
-                  data-toggle="collapse" data-target="#registerCreator,#categories" >Register</button>
+                  <button id="creatorRegisterBtn" type="submit" class="btn btn-primary">Register</button>
                 </div>
               </div>
             </form>
