--- a/resources/stage/web/creators.html
+++ b/resources/stage/web/creators.html
@@ -254,7 +254,8 @@
               </div>
               <div class="form-group">
                 <div class="col-sm-offset-2 col-sm-10">
-                  <button id="creatorRegisterBtn" type="submit" class="btn btn-primary">Register</button>
+                  <button id="creatorRegisterBtn" type="submit" class="btn btn-primary" 
+                  data-target="#registerCreator,#categories">Register</button>
                 </div>
               </div>
             </form>
