--- a/resources/stage/web/creators.html
+++ b/resources/stage/web/creators.html
@@ -444,11 +444,11 @@
           <div class="col-sm-10">
             <input name="issuePrice" class="form-control" type="text" id="formGroupInputLarge" placeholder="In the currency above"
             data-bv-greaterthan="true"
-            data-bv-greaterthan-value=".001"
-            data-bv-greaterthan-message="Must be > .001"
+            data-bv-greaterthan-value="0"
+            data-bv-greaterthan-message="Must be > 0"
 
             data-bv-notempty="true"
-            data-bv-notempty-message="Must be > .001"
+            data-bv-notempty-message="Must be > 0"
 
             >
           </div>
@@ -480,7 +480,7 @@
        <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
           <button id="raiseFundsBtn" type="submit" class="btn btn-primary" 
-          data-toggle="collapse" data-target="">Take me to my page</button>
+          >Take me to my page</button>
         </div>
       </div>
 
