--- a/resources/stage/web/creators.html
+++ b/resources/stage/web/creators.html
@@ -465,6 +465,10 @@
             data-bv-notempty="true"
             data-bv-notempty-message="Must be a whole number"
 
+            data-bv-greaterthan="true"
+            data-bv-greaterthan-value="0"
+            data-bv-greaterthan-message="Must be > 0"
+
             >
           </div>
         </div>
