--- a/resources/stage/web/creators.html
+++ b/resources/stage/web/creators.html
@@ -433,6 +433,7 @@
             data-bv-notempty-message="Must be > 0"
 
             data-bv-greaterthan="true"
+            data-bv-greaterthan-inclusive="false"
             data-bv-greaterthan-value="0"
             data-bv-greaterthan-message="Must be > 0" 
 
@@ -444,6 +445,7 @@
           <div class="col-sm-10">
             <input name="issuePrice" class="form-control" type="text" id="formGroupInputLarge" placeholder="In the currency above"
             data-bv-greaterthan="true"
+            data-bv-greaterthan-inclusive="false"
             data-bv-greaterthan-value="0"
             data-bv-greaterthan-message="Must be > 0"
 
@@ -466,6 +468,7 @@
             data-bv-notempty-message="Must be a whole number"
 
             data-bv-greaterthan="true"
+            data-bv-greaterthan-inclusive="false"
             data-bv-greaterthan-value="0"
             data-bv-greaterthan-message="Must be > 0"
 
