--- a/resources/stage/web/creators.html
+++ b/resources/stage/web/creators.html
@@ -427,7 +427,8 @@
         <div class="form-group form-group-lg">
           <label class="col-sm-2 control-label" for="formGroupInputLarge">Reward per piece per year</label>
           <div class="col-sm-10">
-            <input name="reward_per_piece_per_year" class="form-control" type="text" id="formGroupInputLarge" placeholder="$1/piece/year"
+            <input name="reward_per_piece_per_year" class="form-control" type="text" id="formGroupInputLarge" placeholder="reward/piece/year
+             in the currency above"
 
             data-bv-notempty="true"
             data-bv-notempty-message="Must be > 0"
@@ -441,7 +442,7 @@
           </div>
         </div>
         <div class="form-group form-group-lg">
-          <label class="col-sm-2 control-label" for="formGroupInputLarge">Price</label>
+          <label class="col-sm-2 control-label" for="formGroupInputLarge">Price per piece</label>
           <div class="col-sm-10">
             <input name="issuePrice" class="form-control" type="text" id="formGroupInputLarge" placeholder="In the currency above"
             data-bv-greaterthan="true"
