--- a/resources/stage/web/creator_main.html
+++ b/resources/stage/web/creator_main.html
@@ -206,6 +206,18 @@
           <strong>Your main page is empty.</strong> Create one below.
         </div>
       </div>
+      <div class="col-lg-6">
+        <div class="unverified alert alert-danger alert-dismissible hide" role="alert">
+          <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+          <strong>Your account is Unverified.</strong> You need to link your content/products with this account. 
+          Send an email to <a href="mailto:bitpieces22verify@gmail.com?Subject=VerifyMe" target="_top">
+          bitpieces22verify@gmail.com</a>  with either: 
+          <ul>
+          <li> A picture of you, your content, and your bitpieces creator name. </li>
+          <li> A link to a post or a page from your website or youtube channel, containing your creator name. </li>
+          <li> 
+        </div>
+      </div>
     </div>
 
 
