--- a/resources/stage/web/creator_main.html
+++ b/resources/stage/web/creator_main.html
@@ -200,22 +200,25 @@
     </div>
 
     <div class="row">
-      <div class="col-lg-3">
+      <div class="col-lg-12">
         <div class="first-timers alert alert-warning alert-dismissible hide" role="alert">
           <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
           <strong>Your main page is empty.</strong> Create one below.
         </div>
       </div>
-      <div class="col-lg-6">
+    </div>
+    <div class="row">
+      <div class="col-lg-12">
         <div class="unverified alert alert-danger alert-dismissible hide" role="alert">
           <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
           <strong>Your account is Unverified.</strong> You need to link your content/products with this account. 
           Send an email to <a href="mailto:bitpieces22verify@gmail.com?Subject=VerifyMe" target="_top">
           bitpieces22verify@gmail.com</a>  with either: 
           <ul>
-          <li> A picture of you, your content, and your bitpieces creator name. </li>
-          <li> A link to a post or a page from your website or youtube channel, containing your creator name. </li>
-       
+            <li> A picture of you, your content, and your bitpieces creator name. </li>
+            <li> A link to a post or a page from your website or youtube channel, containing your creator name. </li>
+
+          </ul>
         </div>
       </div>
     </div>
