renaming the page titles

--- a/resources/stage/web/FAQ.html
+++ b/resources/stage/web/FAQ.html
@@ -8,7 +8,7 @@
   <meta name="author" content="">
   <link rel="shortcut icon" href="../../assets/ico/favicon.ico">
 
-  <title>Dashboard Template for Bootstrap</title>
+  <title>Bitpieces</title>
 
   <!-- Bootstrap core CSS -->
   <link href="darkly.bootstrap.min.css" rel="stylesheet">
@@ -342,7 +342,8 @@
             <h2 class="">What are the fees for using Bitpieces?</h2>
             For funders of projects, Bitpieces is completely free. Bitpieces uses 
             <a href="https://coinbase.com/">Coinbase</a> as a payment processor,
-            which currently has zero fees for Bitpieces transactions. Buying the initial pieces, or issuing bids
+            which currently has zero fees for Bitpieces transactions. When not using coinbase,
+            you will incur a .0001-.0002 BTC transaction fee when you first buy pieces. Buying the initial pieces, or issuing bids
             and asks is a zero-fee process. Withdrawals, after selling pieces, are also entirely free.
 
             <br><br>
