--- a/resources/stage/web/creators_pages/Leonardo_Davinci.html
+++ b/resources/stage/web/creators_pages/Leonardo_Davinci.html
@@ -7,7 +7,7 @@
   <meta name="description" content="" /> 
   <meta name="author" content="" /> 
   <link rel="shortcut icon" href="../../assets/ico/favicon.ico" /> 
-  <title>Dashboard Template for Bootstrap</title> 
+  <title>Bitpieces</title> 
   <!-- Bootstrap core CSS --> 
   <link href="../darkly.bootstrap.min.css" rel="stylesheet" /> 
   <!-- Link to font awesome --> 
