--- a/resources/stage/web/carousel.html
+++ b/resources/stage/web/carousel.html
@@ -9,7 +9,7 @@
   <meta name="author" content="">
   <link rel="shortcut icon" href="../../assets/ico/favicon.ico">
 
-  <title>Derp Template for Bootstrap</title>
+  <title>Bitpieces</title>
 
   <!-- Bootstrap core CSS -->
   <link href="darkly.bootstrap.min.css" rel="stylesheet">
@@ -237,7 +237,7 @@
             </div>
             <div class="col-md-7">
               <h2 class="featurette-heading">Zero fees on a <span class="text-muted">secure platform </span></h2>
-              <p class="lead">Security is paramount for both funders and creators, which is why Bitpieces has a 5 pillar <a href="FAQ#how_do_i_know_if_a_creator_is_safe">security strategy</a>. <br><br>For funders, the experience of buying and trading pieces is entirely <b>free</b>. Similar to other funding sites, content-creators pay a <b>5%</b> <a href="FAQ#what_are_the_fees">fee</a> on withdrawals.
+              <p class="lead">Security is paramount for both funders and creators, which is why Bitpieces has a 5 pillar <a href="FAQ#how_do_i_know_if_a_creator_is_safe">security strategy</a>. <br><br>For funders, the experience of buying and trading pieces is entirely <b>free</b>. Similar to other funding sites, content-creators pay a <b>5%</b> <a href="FAQ#what_are_the_fees">fee</a> on withdrawals. When not using coinbase, your client may include <a href="http://bitcoinfees.com/">network fees</a> when you first buy pieces.
               </p>
             </div>
           </div>
