--- a/resources/stage/web/creator_settings.html
+++ b/resources/stage/web/creator_settings.html
@@ -8,7 +8,7 @@
 	<meta name="author" content="">
 	<link rel="shortcut icon" href="../../assets/ico/favicon.ico">
 
-	<title>Dashboard Template for Bootstrap</title>
+	<title>Bitpieces</title>
 
 	<!-- Bootstrap core CSS -->
 	<link href="darkly.bootstrap.min.css" rel="stylesheet">
