forgot to save the rest

--- a/resources/stage/web/creators_pages/99.html
+++ b/resources/stage/web/creators_pages/99.html
@@ -61,7 +61,7 @@
  					</div>
  					<div class="navbar-collapse collapse">
  						<ul class="nav navbar-nav">
- 							<li><a href="carousel">Home</a></li>
+ 							<li><a href="landing">Home</a></li>
  							<li><a href="discover">Discover</a></li>
  							<li class="active"><a href="/creators">Creators</a></li>
  							<li><a href="/userdashboard" id="dashboardhref" class="hide">Dashboard</a></li>
