--- a/resources/stage/web/discover.html
+++ b/resources/stage/web/discover.html
@@ -64,7 +64,7 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav">
-               <li><a href="carousel">Home</a></li>
+               <li><a href="landing">Home</a></li>
                <li class="active"><a href="/discover">Discover</a></li>
                <li><a href="creators">Creators</a></li> 
                <li><a href="/userdashboard_overview" id="dashboardhref" class="hide">Dashboard</a></li>
