--- a/resources/stage/web/creators.html
+++ b/resources/stage/web/creators.html
@@ -250,6 +250,21 @@
                 </div>
               </div>
               <div class="form-group">
+                <div class="col-sm-offset-2 col-sm-10">
+                  <div class="checkbox">
+                    <label>
+                      <input name="terms" type="checkbox"
+                      data-bv-notempty="true"
+                      data-bv-notempty-message="You must accept the terms and conditions"
+
+
+                      > 
+                      <a href="#" data-toggle="modal" data-target="#creatorDisclaimerModal">I accept these terms and conditions </a>
+                    </label>
+                  </div>
+                </div>
+              </div>
+              <div class="form-group">
                 <div id="recaptcha_div" class="col-sm-offset-2 col-sm-10"> </div>
               </div>
               <div class="form-group">
@@ -428,7 +443,7 @@
           <label class="col-sm-2 control-label" for="formGroupInputLarge">Reward per piece per year</label>
           <div class="col-sm-10">
             <input name="reward_per_piece_per_year" class="form-control" type="text" id="formGroupInputLarge" placeholder="reward/piece/year
-             in the currency above"
+            in the currency above"
 
             data-bv-notempty="true"
             data-bv-notempty-message="Must be > 0"
@@ -500,6 +515,29 @@
 </div>
 </div>
 </div>
+</div>
+
+<!-- Modals -->
+<div id="creatorDisclaimerModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title">Disclaimer</h4>
+      </div>
+      <div class="modal-body">
+        <div class="text">
+         blah blah blah, a disclaimer
+       </div>
+
+
+     </div> 
+     <div class="modal-footer">
+       <button type="button" class="btn btn-default" data-dismiss="modal">Okay, I accept</button>
+     </div>
+
+   </div>
+ </div>
 </div>
 
 
