--- a/resources/stage/web/creators.html
+++ b/resources/stage/web/creators.html
@@ -138,96 +138,76 @@
     <!-- The Page -->
     <div id="main_col" class="col-sm-10 col-sm-offset-2 col-md-10 col-md-offset-2 main">
       <div class="starter-template">
-        <h1>Creator page</h1>
-        <p class="lead">Creators have a special page for some explanations. First they have to register creator_name, email and pass, 
-          then they gotta basically make their page from form data</p>
-        </div>
+        <h1>Creator register</h1>
+        <p class="lead">Please read through the entire <a href="FAQ">FAQ</a>, especially about the <a href="FAQ#what_are_rewards">rewards</a> you will owe to your funders,  before signing up and selling pieces. </p>
+      </div>
 
-        <div class="row">
-          <div class="panel-group" id="accordion" data-spy="scroll" data-target="#scroll-nav">
-            <div class="panel panel-default">
-              <div class="panel-heading">
-                <h4 class="panel-title">
-                  <a data-toggle="collapse" data-parent="#accordion" href="#registerCreator">
-                    Register
-                  </a>
-                </h4>
-              </div>
-              <div id="registerCreator" class="panel-collapse collapse in">
-                <div class="panel-body">
+      <div class="row">
+        <div class="panel-group" id="accordion" data-spy="scroll" data-target="#scroll-nav">
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <h4 class="panel-title">
+                <a data-toggle="collapse" data-parent="#accordion" href="#registerCreator">
+                  Register
+                </a>
+              </h4>
+            </div>
+            <div id="registerCreator" class="panel-collapse collapse in">
+              <div class="panel-body">
 
-                 <div class="register">
-                  <h3> Register </h3>
-                  <hr></hr>
+               <div class="register">
+                <h3> Register </h3>
+                <hr></hr>
 
-                  <form id="creatorRegisterForm" class="form-horizontal" role="form"
-                  data-bv-message="This value is not valid"
-                  data-bv-feedbackicons-valid="glyphicon glyphicon-ok"
-                  data-bv-feedbackicons-invalid="glyphicon glyphicon-remove"
-                  data-bv-feedbackicons-validating="glyphicon glyphicon-refresh">
-
-                  <div class="form-group">
-                   <label for="inputUsername4" class="col-sm-2 control-label">Username</label>
-                   <div class="col-sm-10">
-                    <input name="username" type="Username" class="form-control" id="inputUsername4" placeholder="Username"
-                    data-bv-message="The username is not valid"
-
-                    data-bv-notempty="true"
-                    data-bv-notempty-message="The username is required and cannot be empty"
-
-                    data-bv-regexp="true"
-                    data-bv-regexp-regexp="[a-zA-Z0-9_\.]+"
-                    data-bv-regexp-message="The username can only consist of alphabetical, number, dot and underscore"
-
-                    data-bv-stringlength="true"
-                    data-bv-stringlength-min="6"
-                    data-bv-stringlength-max="30"
-                    data-bv-stringlength-message="The username must be more than 6 and less than 30 characters long"
-
-                    />
-                  </div>
-                </div>
+                <form id="creatorRegisterForm" class="form-horizontal" role="form"
+                data-bv-message="This value is not valid"
+                data-bv-feedbackicons-valid="glyphicon glyphicon-ok"
+                data-bv-feedbackicons-invalid="glyphicon glyphicon-remove"
+                data-bv-feedbackicons-validating="glyphicon glyphicon-refresh">
 
                 <div class="form-group">
-                  <label for="inputEmail3" class="col-sm-2 control-label">Email address</label>
-                  <div class="col-sm-10">
-                    <input name="email" type="inputEmail3" class="form-control" id="inputEmail3" placeholder="Email"
-                    data-bv-emailaddress="true"
-                    data-bv-emailaddress-message="The input is not a valid email address" 
-
-                    data-bv-notempty="true"
-                    data-bv-notempty-message="The email is required and cannot be empty" />
-                  </div>
-                </div>
-
-                <div class="form-group">
-                  <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
-                  <div class="col-sm-10">
-                    <input name="password" type="password" class="form-control" id="inputPassword3" placeholder="Password"
-                    data-bv-notempty="true"
-                    data-bv-notempty-message="The password is required and cannot be empty"
-
-                    data-bv-identical="true"
-                    data-bv-identical-field="verifyPassword"
-                    data-bv-identical-message="The password and its confirm are not the same"
-
-                    data-bv-different="true"
-                    data-bv-different-field="username"
-                    data-bv-different-message="The password cannot be the same as username" />
-
-
-
-                  </div>
-                </div>
-                <div class="form-group">
-                 <label for="inputPassword3" class="col-sm-2 control-label">Verify password</label>
+                 <label for="inputUsername4" class="col-sm-2 control-label">Username</label>
                  <div class="col-sm-10">
-                  <input name="verifyPassword" type="password" class="form-control" id="inputPassword3" placeholder="Verify Password"
+                  <input name="username" type="Username" class="form-control" id="inputUsername4" placeholder="Username"
+                  data-bv-message="The username is not valid"
+
                   data-bv-notempty="true"
-                  data-bv-notempty-message="The confirm password is required and cannot be empty"
+                  data-bv-notempty-message="The username is required and cannot be empty"
+
+                  data-bv-regexp="true"
+                  data-bv-regexp-regexp="[a-zA-Z0-9_\.]+"
+                  data-bv-regexp-message="The username can only consist of alphabetical, number, dot and underscore"
+
+                  data-bv-stringlength="true"
+                  data-bv-stringlength-min="6"
+                  data-bv-stringlength-max="30"
+                  data-bv-stringlength-message="The username must be more than 6 and less than 30 characters long"
+
+                  />
+                </div>
+              </div>
+
+              <div class="form-group">
+                <label for="inputEmail3" class="col-sm-2 control-label">Email address</label>
+                <div class="col-sm-10">
+                  <input name="email" type="inputEmail3" class="form-control" id="inputEmail3" placeholder="Email"
+                  data-bv-emailaddress="true"
+                  data-bv-emailaddress-message="The input is not a valid email address" 
+
+                  data-bv-notempty="true"
+                  data-bv-notempty-message="The email is required and cannot be empty" />
+                </div>
+              </div>
+
+              <div class="form-group">
+                <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
+                <div class="col-sm-10">
+                  <input name="password" type="password" class="form-control" id="inputPassword3" placeholder="Password"
+                  data-bv-notempty="true"
+                  data-bv-notempty-message="The password is required and cannot be empty"
 
                   data-bv-identical="true"
-                  data-bv-identical-field="password"
+                  data-bv-identical-field="verifyPassword"
                   data-bv-identical-message="The password and its confirm are not the same"
 
                   data-bv-different="true"
@@ -235,91 +215,110 @@
                   data-bv-different-message="The password cannot be the same as username" />
 
 
-                </div>
-              </div>
 
-
-
-              <div class="form-group">
-                <div class="col-sm-offset-2 col-sm-10">
-                  <div class="checkbox">
-                    <label>
-                      <input name="remember" type="checkbox"> Remember me
-                    </label>
-                  </div>
                 </div>
               </div>
               <div class="form-group">
-                <div class="col-sm-offset-2 col-sm-10">
-                  <div class="checkbox">
-                    <label>
-                      <input name="terms" type="checkbox"
-                      data-bv-notempty="true"
-                      data-bv-notempty-message="You must accept the terms and conditions"
+               <label for="inputPassword3" class="col-sm-2 control-label">Verify password</label>
+               <div class="col-sm-10">
+                <input name="verifyPassword" type="password" class="form-control" id="inputPassword3" placeholder="Verify Password"
+                data-bv-notempty="true"
+                data-bv-notempty-message="The confirm password is required and cannot be empty"
+
+                data-bv-identical="true"
+                data-bv-identical-field="password"
+                data-bv-identical-message="The password and its confirm are not the same"
+
+                data-bv-different="true"
+                data-bv-different-field="username"
+                data-bv-different-message="The password cannot be the same as username" />
 
 
-                      > 
-                      <a href="#" data-toggle="modal" data-target="#creatorDisclaimerModal">I accept these terms and conditions </a>
-                    </label>
-                  </div>
+              </div>
+            </div>
+
+
+
+            <div class="form-group">
+              <div class="col-sm-offset-2 col-sm-10">
+                <div class="checkbox">
+                  <label>
+                    <input name="remember" type="checkbox"> Remember me
+                  </label>
                 </div>
               </div>
-              <div class="form-group">
-                <div id="recaptcha_div" class="col-sm-offset-2 col-sm-10"> </div>
-              </div>
-              <div class="form-group">
-                <div class="col-sm-offset-2 col-sm-10">
-                  <button id="creatorRegisterBtn" type="submit" class="btn btn-primary" 
-                  data-target="#registerCreator,#categories">Register</button>
+            </div>
+            <div class="form-group">
+              <div class="col-sm-offset-2 col-sm-10">
+                <div class="checkbox">
+                  <label>
+                    <input name="terms" type="checkbox"
+                    data-bv-notempty="true"
+                    data-bv-notempty-message="You must accept the terms and conditions"
+
+
+                    > 
+                    <a href="#" data-toggle="modal" data-target="#creatorDisclaimerModal">I accept these terms and conditions </a>
+                  </label>
                 </div>
               </div>
-            </form>
+            </div>
+            <div class="form-group">
+              <div id="recaptcha_div" class="col-sm-offset-2 col-sm-10"> </div>
+            </div>
+            <div class="form-group">
+              <div class="col-sm-offset-2 col-sm-10">
+                <button id="creatorRegisterBtn" type="submit" class="btn btn-primary" 
+                data-target="#registerCreator,#categories">Register</button>
+              </div>
+            </div>
+          </form>
 
-          </div>
         </div>
-
-
       </div>
-    </div>
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        <h4 class="panel-title">
-          <a data-toggle="collapse" data-parent="#accordion" href="#categories">
-            Categories
-          </a>
-        </h4>
-      </div>
-      <div id="categories" class="panel-collapse collapse">
-        <div class="panel-body">
-          Select up to 3 categories
-          <form id="categoriesForm" class="form-inline" role="form">
-
-           <div class="form-group" id="categoriesDiv">
-
-            <script id="categories_template" type="x-tmpl-mustache"> 
-
-              <select multiple id="categorySelect" name="category[]" class="form-control" role="menu" aria-labelledby="dropdownMenu1"
-              size=10 style='height: 100%;'>
-              {{#.}}
-              <option value='{{name}}'>{{name}}</option>
-              {{/.}}
-            </select>
-
-          </script>
-        </div>
-
-        <div class="form-group">
-          <div class="col-sm-offset-2 col-sm-10">
-            <button id="saveCategoriesBtn" type="submit" class="btn btn-primary" 
-            data-toggle="collapse" data-target="#categories,#units">Save</button>
-          </div>
-        </div>
 
 
-
-      </form>
     </div>
   </div>
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <h4 class="panel-title">
+        <a data-toggle="collapse" data-parent="#accordion" href="#categories">
+          Categories
+        </a>
+      </h4>
+    </div>
+    <div id="categories" class="panel-collapse collapse">
+      <div class="panel-body">
+        Select up to 3 categories
+        <form id="categoriesForm" class="form-inline" role="form">
+
+         <div class="form-group" id="categoriesDiv">
+
+          <script id="categories_template" type="x-tmpl-mustache"> 
+
+            <select multiple id="categorySelect" name="category[]" class="form-control" role="menu" aria-labelledby="dropdownMenu1"
+            size=10 style='height: 100%;'>
+            {{#.}}
+            <option value='{{name}}'>{{name}}</option>
+            {{/.}}
+          </select>
+
+        </script>
+      </div>
+
+      <div class="form-group">
+        <div class="col-sm-offset-2 col-sm-10">
+          <button id="saveCategoriesBtn" type="submit" class="btn btn-primary" 
+          data-toggle="collapse" data-target="#categories,#units">Save</button>
+        </div>
+      </div>
+
+
+
+    </form>
+  </div>
+</div>
 </div>
 <div class="panel panel-default">
   <div class="panel-heading">
@@ -436,14 +435,13 @@
   </div>
   <div id="raiseFunds" class="panel-collapse collapse">
     <div class="panel-body">
-      A big description or a link to one talking about rewards, and issues
+      Read through the <a href="FAQ">FAQ</a> to learn about <a href="FAQ#what_are_rewards">rewards</a>.<br><br>
       <form id="raiseFundsForm" class="form-horizontal" role="form">
 
         <div class="form-group form-group-lg">
           <label class="col-sm-2 control-label" for="formGroupInputLarge">Reward per piece per year</label>
           <div class="col-sm-10">
-            <input name="reward_per_piece_per_year" class="form-control" type="text" id="formGroupInputLarge" placeholder="reward/piece/year
-            in the currency above"
+            <input name="reward_per_piece_per_year" class="form-control" type="text" id="formGroupInputLarge" placeholder="reward/piece/year in the currency above"
 
             data-bv-notempty="true"
             data-bv-notempty-message="Must be > 0"
@@ -497,6 +495,18 @@
          <label class="col-sm-2 control-label" for="formGroupInputLarge">Total</label>
          <div id="issueTotal" class="col-sm-10 form-control-static">
 
+         </div>
+       </div>
+
+       <div class="form-group form-group-lg">
+         <label class="col-sm-2 control-label" for="formGroupInputLarge">Reward %</label>
+         <div id="rewardPct" class="col-sm-10 form-control-static">
+         </div>
+       </div>
+
+       <div class="form-group form-group-lg">
+       <label class="col-sm-2 control-label" for="formGroupInputLarge">Rewards owed</label>
+         <div id="rewardsOwedPerYear" class="col-sm-10 form-control-static">
          </div>
        </div>
        
