--- a/resources/stage/web/creators.html
+++ b/resources/stage/web/creators.html
@@ -435,7 +435,7 @@
   </div>
   <div id="raiseFunds" class="panel-collapse collapse">
     <div class="panel-body">
-      Read through the <a href="FAQ">FAQ</a> to learn about <a href="FAQ#what_are_rewards">rewards</a>.<br><br>
+      Read through the <a href="FAQ">FAQ</a> to learn about <a href="FAQ#what_are_rewards">rewards</a>. A 0.5% reward percentage is standard for startup projects.<br><br>
       <form id="raiseFundsForm" class="form-horizontal" role="form">
 
         <div class="form-group form-group-lg">
