show pieces available

--- a/resources/stage/web/creators.html
+++ b/resources/stage/web/creators.html
@@ -505,7 +505,7 @@
        </div>
 
        <div class="form-group form-group-lg">
-       <label class="col-sm-2 control-label" for="formGroupInputLarge">Rewards owed</label>
+       <label class="col-sm-2 control-label" for="formGroupInputLarge">Potential Rewards owed</label>
          <div id="rewardsOwedPerYear" class="col-sm-10 form-control-static">
          </div>
        </div>
