--- a/resources/stage/web/creator_main.html
+++ b/resources/stage/web/creator_main.html
@@ -298,6 +298,8 @@
                  <i class="fa fa-info-circle"></i></a></p>
 
                  <p id="pieces_held_current" class="announcement-heading"></p>
+                 /
+                 <p id="pieces_available_current" class="announcement-heading"></p>
                  <p class="announcement-text">Pieces held</p>
                  
                  <p id ="worth_current" class="announcement-heading"></p>
