--- a/resources/stage/web/about.html
+++ b/resources/stage/web/about.html
@@ -131,7 +131,7 @@
        <div class="col-md-12">
          Bitpieces was founded in 2014 as a crowd-funding platform for content-creators and small businesses, inspired by other crowd-funding platforms, with the intention of using Bitcoin as the transaction processing network. 
          <br><br>
-         It was inspired by seeing the need to subvert the tremendous barriers to entry for startup companies; such as finding angel investors and private capital, doing seed rounds, and the efforts and energy wasted do raise money for great ideas. With the net', finding funding for great projects should be easy and engaging.
+         It was inspired by seeing the need to subvert the tremendous barriers to entry for startup companies; such as finding angel investors and private capital, doing seed rounds, and the efforts and energy wasted to raise money for great ideas. With the net', finding funding for great projects should be easy and engaging.
          <br><br>
          In addition, smaller content-creators need a way to raise funds, and do so in a way that makes their funders feel safe. While numerous small stock-like exchanges exist, none feel suited for the web, for the type of content people make in today's world, or for low-end content creators who just want to keeping making the things.
          <br><br>
