--- a/resources/stage/web/creator_main.html
+++ b/resources/stage/web/creator_main.html
@@ -297,9 +297,7 @@
                <p class="announcement-text">Safety rating    <a href="FAQ#how_do_i_know_if_a_creator_is_safe">
                  <i class="fa fa-info-circle"></i></a></p>
 
-                 <p id="pieces_held_current" class="announcement-heading"></p>
-                 /
-                 <p id="pieces_available_current" class="announcement-heading"></p>
+                 <p id="pieces_held_current" class="announcement-heading"></p>/<p id="pieces_available_current" class="announcement-heading"></p>
                  <p class="announcement-text">Pieces held</p>
                  
                  <p id ="worth_current" class="announcement-heading"></p>
