making remember me checkbox meaningful

--- a/resources/stage/web/creators_pages/99.html
+++ b/resources/stage/web/creators_pages/99.html
@@ -57,7 +57,7 @@
  							<span class="icon-bar"></span>
  							<span class="icon-bar"></span>
  						</button>
- 						<a class="navbar-brand" href="#">BitPieces</a>
+ 						<a class="navbar-brand" href="landing">BitPieces</a>
  					</div>
  					<div class="navbar-collapse collapse">
  						<ul class="nav navbar-nav">
