--- a/resources/stage/web/creators_pages/Leonardo_Davinci.html
+++ b/resources/stage/web/creators_pages/Leonardo_Davinci.html
@@ -43,7 +43,7 @@
      <!-- Brand and toggle get grouped for better mobile display --> 
      <div class="navbar-header"> 
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button> 
-      <a class="navbar-brand" href="#">BitPieces</a> 
+      <a class="navbar-brand" href="landing">BitPieces</a> 
      </div> 
      <!-- Collect the nav links, forms, and other content for toggling --> 
      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1"> 
