--- a/resources/stage/web/landing.html
+++ b/resources/stage/web/landing.html
@@ -58,7 +58,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">BitPieces</a>
+      <a class="navbar-brand" href="landing">BitPieces</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
