--- a/resources/stage/web/userdashboard_pieces.html
+++ b/resources/stage/web/userdashboard_pieces.html
@@ -61,7 +61,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">BitPieces</a>
+            <a class="navbar-brand" href="landing">BitPieces</a>
           </div>
 
           <!-- Collect the nav links, forms, and other content for toggling -->
